Adds unified settings with migration (#9108)
* Add Settings for project system

* Was missing semicolon in strings....

* Strings reflect current guidelines, don't copy settings file to output

* Rename filePrefix/folderPrefix to _xaml.. because the test only covers xaml files, fix package content test

* Update tests/Microsoft.VisualStudio.ProjectSystem.Managed.VS.UnitTests/Setup/SwrTests.cs

Co-authored-by: Melissa Treviño <melissat@microsoft.com>

* Ignore settings manifest file in CommonFiles test

* Remove settings file from packaging tests

---------

Co-authored-by: Melissa Treviño <melissat@microsoft.com>

--- a/eng/imports/RepoLayout.props
+++ b/eng/imports/RepoLayout.props
@@ -18,6 +18,7 @@
     <VisualStudioSetupInsertionPath>$(VisualStudioSetupOutputPath)Insertion\</VisualStudioSetupInsertionPath>
     <VisualStudioSetupIntermediateOutputPath>$(ArtifactsConfigurationDir)VSSetup.obj\</VisualStudioSetupIntermediateOutputPath>
     <VisualStudioXamlRulesDir>$(VisualStudioSetupOutputPath)Rules\</VisualStudioXamlRulesDir>
+    <VisualStudioExtensionSetupDir>$(RepoRoot)setup\</VisualStudioExtensionSetupDir>
   </PropertyGroup>
 
 </Project>
