Set auto complete to off in insertion PRs to vs-green (#9127)

--- a/eng/pipelines/official.yml
+++ b/eng/pipelines/official.yml
@@ -306,4 +306,5 @@ stages:
           pipelineID: $(System.DefinitionId)
           InsertTargetBranch: ${{ parameters.InsertionVSGreenBranch }}
           ComponentSubDir: $(Build.Repository.Name)
+          SetAutoComplete: false
           
