--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -125,6 +125,9 @@
     <PackageVersion Include="Microsoft.TestPlatform"                                                 Version="16.2.0" />
     <PackageVersion Include="MSTest.TestAdapter"                                                     Version="2.1.2" />
     <PackageVersion Include="MSTest.TestFramework"                                                   Version="2.1.2" />
+
+    <!-- Localization -->
+    <PackageVersion Include="CommandLineParser"                                                     Version="2.8.0" />
   </ItemGroup>
 
 </Project>
