feature: Add resource DLLs to NPM package
Related to AB#1839423.

This commit updates our build to include the Microsoft.VisualStudio.ProjectSystem.Managed resource DLLs in locale-specific directories within the NPM package. This is the layout that the .NET resource manager generally expects for automatic discovery of locale-specific resources.

Here our existing `AddFilesForNpmPackage` target takes a dependency on the `SatelliteDllsProjectOutputGroup` target. The latter creates `SatelliteDllsProjectOutputGroupOutput` items representing each locale-specific .resource.dll, and the former converts these to the `NpmContent` items used by later tasks to actually create the package.

--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed/Microsoft.VisualStudio.ProjectSystem.Managed.csproj
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed/Microsoft.VisualStudio.ProjectSystem.Managed.csproj
@@ -712,11 +712,14 @@
     </None>
   </ItemGroup>
 
-  <Target Name="AddFilesForNpmPackage" DependsOnTargets="Build" Condition="'$(TargetFramework)' == 'net7.0'">
+  <Target Name="AddFilesForNpmPackage" DependsOnTargets="Build;SatelliteDllsProjectOutputGroup" Condition="'$(TargetFramework)' == 'net7.0'">
     <ItemGroup>
       <NpmContent Include="exports.json" />
       <!-- We have a runtime dependency on Microsoft.CodeAnalysis.dll in VS Code scenarios. -->
       <NpmContent Include="$(PkgMicrosoft_CodeAnalysis_Common)\lib\net6.0\Microsoft.CodeAnalysis.dll" />
+      <NpmContent Include="@(SatelliteDllsProjectOutputGroupOutput)">
+        <PackagePath>%(SatelliteDllsProjectOutputGroupOutput.TargetPath)</PackagePath>
+      </NpmContent>
     </ItemGroup>
   </Target>
 
