Update tagger.yml (#9176)
Skip component governance detection in tagger pipeline

--- a/eng/pipelines/tagger.yml
+++ b/eng/pipelines/tagger.yml
@@ -43,6 +43,7 @@ variables:
   # See: https://aka.ms/gdn-injection
   runCodesignValidationInjection: false
   Codeql.Enabled: false
+  skipComponentGovernanceDetection: true
   
 ###################################################################################################################################################################
 # STEPS
