--- a/.github/workflows/markdown-link-check.yml
+++ b/.github/workflows/markdown-link-check.yml
@@ -1,5 +1,11 @@
 name: markdown-link-check
-on: [push, pull_request]
+on: 
+  push:
+    branches:
+      - '*'
+    tags-ignore:
+      - 'release/vs/*'
+  pull_request:
 
 jobs:
   markdown-link-check:
