Update conditions to show Native AOT properties.
I have changed the project capability condition to include _NativeAOTProperties_ to projects targeting .NET 8 or higher. We later exclude/include class libraries when checking the visibility condition:
The _IsTrimmable_ and _IsAotCompatible_ properties should only be shown to class library projects.
The _Trimming_ and _PublishAot_ properties should not be shown to class library projects.

--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/DesignTimeTargets/Microsoft.Managed.DesignTime.targets
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/DesignTimeTargets/Microsoft.Managed.DesignTime.targets
@@ -562,9 +562,11 @@
     </ItemGroup>
   </Target>
 
-  <!-- Native AOT properties should be shown by default, except for WPF, WinForms, and class library projects. -->
+  <!-- Native AOT properties should be shown by default for projects targeting .NET 8 or higher, except for WPF and WinForms projects -->
   <PropertyGroup>
-    <ShowNativeAOTProperties Condition="'$(ShowNativeAOTProperties)' == '' and '$(UseWPF)' == 'false' and '$(UseWindowsForms)' == 'false' and $(OutputType) != 'Library'">true</ShowNativeAOTProperties>
+    <ShowNativeAOTProperties Condition="'$(ShowNativeAOTProperties)' == ''
+                             and ('$(TargetFrameworkIdentifier)' == '.NETCoreApp' And '$(_TargetFrameworkVersionWithoutV)' >= '8.0')">true</ShowNativeAOTProperties>
+    <ShowNativeAOTProperties Condition="'$(UseWPF)' == 'true' or '$(UseWindowsForms)' == 'true'">false</ShowNativeAOTProperties>
   </PropertyGroup>
 
 </Project>
