--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/DesignTimeTargets/Microsoft.Managed.DesignTime.targets
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/DesignTimeTargets/Microsoft.Managed.DesignTime.targets
@@ -565,7 +565,7 @@
   <!-- Native AOT properties should be shown by default for projects targeting .NET 8 or higher, except for WPF and WinForms projects -->
   <PropertyGroup>
     <ShowNativeAOTProperties Condition="'$(ShowNativeAOTProperties)' == ''
-                             and ('$(TargetFrameworkIdentifier)' == '.NETCoreApp' And '$(_TargetFrameworkVersionWithoutV)' >= '8.0')">true</ShowNativeAOTProperties>
+                             and ('$(TargetFrameworkIdentifier)' == '.NETCoreApp' and '$(_TargetFrameworkVersionWithoutV)' >= '8.0')">true</ShowNativeAOTProperties>
     <ShowNativeAOTProperties Condition="'$(UseWPF)' == 'true' or '$(UseWindowsForms)' == 'true'">false</ShowNativeAOTProperties>
   </PropertyGroup>
 
