Allow opting out of package-based Build Acceleration disablement
We have a feature that disables Build Acceleration when certain NuGet packages are detected. This change adds the ability to set `EnableDefaultBuildAccelerationIncompatiblePackages` to `false` in order to disable this behaviour. This allows customers to more easily disable this default behaviour.

--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/DesignTimeTargets/Microsoft.Managed.DesignTime.targets
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/DesignTimeTargets/Microsoft.Managed.DesignTime.targets
@@ -26,7 +26,8 @@
     <PackageAction Condition="'$(PackageAction)' == ''">Pack</PackageAction>
   </PropertyGroup>
 
-  <ItemGroup>
+  <!-- Specify NuGet packages that are known to not work with Build Acceleration. -->
+  <ItemGroup Condition="'$(EnableDefaultBuildAccelerationIncompatiblePackages)' != 'false'">
     <!-- Disable Build Acceleration for VSIX projects -->
     <BuildAccelerationIncompatiblePackage Include="Microsoft.VSSDK.BuildTools" />
   </ItemGroup>
