--- a/eng/pipelines/templates/build-pull-request.yml
+++ b/eng/pipelines/templates/build-pull-request.yml
@@ -24,6 +24,14 @@ jobs:
   - powershell: npm --version
     displayName: Check npm version
 
+  # Ensure the .NET runtime needed by our unit tests is installed.
+  - task: UseDotNet@2
+    displayName: Install .NET Runtime
+    inputs:
+      packageType: runtime
+      # This should match the target of our unit test projects.
+      version: 7.0.x
+
   # Allows for accessing the internal AzDO feed (vs-impl-internal) for project restore via Azure Artifacts Credential Provider.
   # See: https://github.com/microsoft/artifacts-credprovider#automatic-usage
   # YAML reference: https://docs.microsoft.com/azure/devops/pipelines/tasks/package/nuget-authenticate?view=azure-devops
