Add a rule for AdditionalFiles
To ensure the language service can get the same link metadata and
handling as Compile items, I'm updating the VS Code project system to
reuse the same logic. This requires having a new rule to grab the items
during evaluation, so I'm copy/pasting the Compile item and updating
as appropriate.

--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed/Microsoft.VisualStudio.ProjectSystem.Managed.csproj
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed/Microsoft.VisualStudio.ProjectSystem.Managed.csproj
@@ -253,6 +253,16 @@
 
   <!-- Items -->
   <ItemGroup>
+    <Compile Update="ProjectSystem\Rules\Items\AdditionalFiles.cs">
+      <DependentUpon>AdditionalFiles.xaml</DependentUpon>
+    </Compile>
+    <XamlPropertyRule Include="ProjectSystem\Rules\Items\AdditionalFiles.xaml">
+      <SubType>Designer</SubType>
+      <XlfInput>false</XlfInput>
+      <DataAccess>None</DataAccess>
+      <Generator>MSBuild:GenerateRuleSourceFromXaml</Generator>
+      <RuleInjection>None</RuleInjection>
+    </XamlPropertyRule>
     <Compile Update="ProjectSystem\Rules\Items\Compile.cs">
       <DependentUpon>Compile.xaml</DependentUpon>
     </Compile>
